--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,6 +43,28 @@
 *::after {
   box-sizing: border-box;
 }
+.oculto{
+  visibility: hidden;
+  
+}
+.visible{
+  visibility: visible;
+  
+}
+.button-container{
+  display:inline-block;
+  position:relative;
+  }
+.button-container a{
+    position: absolute;
+    bottom:4em;
+    right:4em;
+    background-color:#8F0005;
+    border-radius:1.5em;
+    color:white;
+    text-transform:uppercase;
+    padding:1em 1.5em;
+    }
 
 .card-bodyImagen {
   flex: 1 1 auto;
@@ -73,6 +95,7 @@ nav,
 section {
   display: block;
 }
+
 
 html {
   background-color: #fff;
